Make navigation buttons functional and add month title

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
         <title>Event Calendar</title>
     </head>
     <body>
-        <nav>
+        <nav id="calendar-navigation">
             <button id="prevButton">&larr;</button>
+            <div id="month-title"></div>
             <button id="nextButton">&rarr;</button>
         </nav>
         <main>
