--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <body>
         <div id="calendar-view">
             <nav id="calendar-navigation">
-                <button id="prevButton">&larr;</button>
+                <button class="nav-button" id="todayButton">&odot; </button>
+                <button class="nav-button" id="prevButton">&larr;</button>
                 <div id="month-title"></div>
-                <button id="nextButton">&rarr;</button>
-                <button id="createButton">+</button>
+                <button class="nav-button" id="nextButton">&rarr;</button>
+                <button class="nav-button" id="createButton">&oplus; </button>
             </nav>
             <main>
                 <div id="calendar">
@@ -24,7 +25,7 @@
         </div>
         <div id="event-detail-view" class="modal hidden">
             <div id="event-modal" class="modal-content">
-                <button class="modal-close">X</button>
+                <button class="modal-close">&#x2715;</button>
                 <p id="event-date"></p>
                 <h2 id="event-title"></h2>
                 <p id="event-result"></p>
@@ -34,13 +35,13 @@
         </div>
         <div id="event-create-view" class="modal hidden">
             <div id="create-modal" class="modal-content">
-                <button class="modal-close">X</button>
-                <h2 id="create-modal-title">Create new event</h2>
+                <button class="modal-close">&#x2715;</button>
+                <h2 id="create-modal-title">New event</h2>
                 <form id="event-create-form">
+                    <label>Match<input type="checkbox" id="event-input-match"></label> 
                     <label id="event-input-name-label">Name<input type="text" id="event-input-name" required></label>
                     <label class="hidden" id="event-input-hometeam-label">Home Team<input type="text" id="event-input-hometeam"></label>
                     <label class="hidden" id="event-input-awayteam-label">Away Team<input type="text" id="event-input-awayteam"></label>
-                    <label>Match<input type="checkbox" id="event-input-match"></label> 
                     <label>Date & Time<input type="datetime-local" id="event-input-datetime" required></label>
                     <label>Sport<input type="text" id="event-input-sport"></label>
                     <label>Competition<input type="text" id="event-input-competition"></label>
