Wire up sport selector to change event create input fields

--- a/index.html
+++ b/index.html
@@ -46,16 +46,15 @@
                         <option>American Football</option>
                         <option>Baseball</option>
                         <option>Basketball</option>    
-                        <option>Boxing</option>
                         <option>Cricket</option>
                         <option>Football</option>
                         <option>Ice hockey</option>
+                        <option>Marathon</option>
+                        <option>Swimming</option>
                         <option>Volleyball</option>
-                        <option>Tennis</option>
                         <option>Track and field</option>
                     </select>
                     </label>
-                    <label>Match<input type="checkbox" id="event-input-match"></label> 
                     <label id="event-input-name-label">Name<input type="text" id="event-input-name" required></label>
                     <label class="hidden" id="event-input-hometeam-label">Home Team<input type="text" id="event-input-hometeam"></label>
                     <label class="hidden" id="event-input-awayteam-label">Away Team<input type="text" id="event-input-awayteam"></label>
